--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "googleapis": "^39.2.0",
     "gravatar": "^1.8.2",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
