--- a/package.json
+++ b/package.json
@@ -28,7 +28,10 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "swagger-ui-dist": "^5.4.2",
+    "swagger-ui-react": "^5.4.2",
+    "unpkg": "^0.2.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
