--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "eslint-plugin-import": "2.25.3",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
+    "nodemon": "^2.0.15",
     "swagger-ui": "^5.4.2",
-    "nodemon": "^2.0.15"
+    "swagger-ui-express": "^5.0.0"
   },
   "license": "MIT"
 }
