--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
-    "nodemailer": "^6.9.4"
+    "nodemailer": "^6.9.4",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
@@ -38,8 +39,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "5.2.0",
     "nodemon": "^2.0.15",
-    "swagger-ui": "^5.4.2",
-    "swagger-ui-express": "^5.0.0"
+    "swagger-ui": "^5.4.2"
   },
   "license": "MIT"
 }
