--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint:fix": "eslint --fix **/*.js"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -29,7 +30,9 @@
     "multer": "^1.4.5-lts.1",
     "nanoid": "^4.0.2",
     "nodemailer": "^6.9.4",
-    "swagger-ui-express": "^5.0.0"
+    "query-string": "^8.1.0",
+    "swagger-ui-express": "^5.0.0",
+    "url": "^0.11.1"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
